--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+# hello_page:
+#   path: /hello/test/change
+#   controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController::templateaction
+#   defaults:
+#     template: 'hello_page.html.twig'
